<resources>


    <string name="app_name">LetsWork</string>
    <string name="textLogo"><b>lets</b></string>
    <string name="term_Cond"> <u>Terms And Conditions</u></string>
    <string name="auto_renew"><u>Auto Renew</u></string>
    <string name="google_maps_API_key">AIzaSyBDKWJP59SNrCgezYxbOmF-FUX6-PN-YgM</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">letswork</string>
    <string name="nav_header_subtitle">none</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_package">BUY A PACKAGE</string>
    <string name="menu_connect">CONNECT</string>
    <string name="menu_notification">NOTIFICATION</string>
    <string name="menu_history">HISTORY</string>
    <string name="menu_events">EVENTS</string>
    <string name="menu_meeting">BOOK A MEETING ROOM</string>
    <string name="menu_contact_us">CONTACT US</string>
    <string name="menu_share">INVITE YOUR FRIENDS</string>

    <string name="search_hint">Search Location...</string>
</resources>
